--- a/updates.html
+++ b/updates.html
@@ -122,7 +122,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col text-center">
-                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#facebookModal">
+                                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#facebookModal">
                                         AEHCA Facebook
                                       </button>
                                       <!-- Modal -->
@@ -140,7 +140,7 @@
                                             </div>
                                             <div class="modal-footer">
                                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Keep me here</button>
-                                              <a type="button" class="btn btn-primary" href="https://www.facebook.com/AEHCAInc">Continue to Facebook</a>
+                                              <a type="button" class="btn btn-info" href="https://www.facebook.com/AEHCAInc">Continue to Facebook</a>
                                             </div>
                                           </div>
                                         </div>
@@ -203,7 +203,7 @@
                 >AEHCA Inc. is a developing non-profit association working to build
                 relationships with partners in Central America. To give support to
                 our cause, please visit our
-                <a href="/give.html">donation page.</a></small
+                <a class="text-info" href="/give.html">donation page.</a></small
               ></span>
         </div>
     </footer>
