changed colors of buttons and links

--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
                   <p></p>
                 <div class="row">
                     <div class="col text-center">
-                        <a class="btn btn-primary" href="/index.html" role="button">Return Home</a>
+                        <a class="btn btn-info" href="/index.html" role="button">Return Home</a>
                     </div>
                 </div>
             </div>
