--- a/give.html
+++ b/give.html
@@ -101,8 +101,8 @@
             <div class="breadcrumbs">
                 <nav>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Give</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="/index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="#">Give</a></li>
                 </ol>
                 </nav>
             </div>
@@ -116,13 +116,13 @@
                 <div class="media">
                     <div class="media-body">
                         AEHCA thanks you for considering a donation to support our mission. Before donating,
-                         please review our <a href="/privacy.html">privacy policy</a> and <a href="/terms.html">terms and conditions</a>.
+                         please review our <a class="text-info" href="/privacy.html">privacy policy</a> and <a class="text-info" href="/terms.html">terms and conditions</a>.
                         <p></p>
                         <p></p>
                         <div class="container">
                             <div class="row">
                                 <div class="col text-center">
-                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#donateModal">
+                                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#donateModal">
                                         Donate
                                       </button>
                                       
