--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <p></p>
                 <div class="row">
                     <div class="col text-right">
-                        <a class="btn btn-primary float-right" href="/news/1.html" role="button">Read more</a>
+                        <a class="btn btn-info float-right" href="/news/1.html" role="button">Read more</a>
                     </div>
                 </div>
             </div>
