--- a/partnerships/guatemala/ipala.html
+++ b/partnerships/guatemala/ipala.html
@@ -101,9 +101,9 @@
             <div class="breadcrumbs">
                 <nav>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="/partnerships.html">Partnerships</a></li>
-                    <li class="breadcrumb-item"><a href="#">Ipala</a></li> <!--../../partnerships/guatemala/ipala.html-->
+                    <li class="breadcrumb-item"><a class="text-info" href="/index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="/partnerships.html">Partnerships</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="#">Ipala</a></li> <!--../../partnerships/guatemala/ipala.html-->
                 </ol>
                 </nav>
             </div>
