--- a/privacy.html
+++ b/privacy.html
@@ -101,8 +101,8 @@
             <div class="breadcrumbs">
                 <nav>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Privacy Policy</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="/index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="#">Privacy Policy</a></li>
                 </ol>
                 </nav>
             </div>
