--- a/partnerships.html
+++ b/partnerships.html
@@ -101,8 +101,8 @@
             <div class="breadcrumbs">
                 <nav>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Partnerships</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="/index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="#">Partnerships</a></li>
                 </ol>
                 </nav>
             </div>
@@ -134,7 +134,7 @@
                                         <p></p>
                                         <li class="font-weight-bold">
                                             Guatemala
-                                            <ul class="font-weight-normal"><a href="/partnerships/guatemala/ipala.html">Ipala</a></ul>
+                                            <ul class="font-weight-normal"><a class="text-info" href="/partnerships/guatemala/ipala.html">Ipala</a></ul>
                                         </li>
                                         <p></p>
                                         <li class="font-weight-bold">Honduras</li>
