--- a/updates.html
+++ b/updates.html
@@ -102,8 +102,8 @@
             <div class="breadcrumbs">
                 <nav>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Latest Updates</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="/index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="#">Latest Updates</a></li>
                 </ol>
                 </nav>
             </div>
