changed home link to just root

--- a/give.html
+++ b/give.html
@@ -58,7 +58,7 @@
                 <a class="nav-link text-warning font-weight-bold" href="/updates.html">Latest Updates</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link text-warning" href="/index.html">Home</a>
+                <a class="nav-link text-warning" href="/">Home</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link text-warning" href="/about.html">About</a>
@@ -101,7 +101,7 @@
             <div class="breadcrumbs">
                 <nav>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a class="text-info" href="/index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="/">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-info" href="#">Give</a></li>
                 </ol>
                 </nav>
