--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link text-warning font-weight-bold" href="/updates.html">Latest Updates</span></a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link text-warning" href="/index.html">Home</a>
+            <a class="nav-link text-warning" href="/">Home</a>
         </li>
         <li class="nav-item active">
             <a class="nav-link text-warning" href="/about.html">About</a>
