adding payment back in to test

--- a/give.html
+++ b/give.html
@@ -142,7 +142,7 @@
                                             </div>
                                             <div class="modal-footer">
                                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Keep me here</button>
-                                              <!-- COMMENT THIS OUT WHILE THIS IS NOT THE OFFICIAL SITE
+                                              <!-- COMMENT THIS OUT WHILE THIS IS NOT THE OFFICIAL SITE -->
                                               <form action="https://checkout.globalgatewaye4.firstdata.com/pay" id="pay_now_form_12edcdebac" method="post">
                                                 <input type="hidden" name="x_login" value="WSP-AEHCA-OsnC5wC@vw" />
                                                 <input type="hidden" name="x_show_form" value="PAYMENT_FORM" />
@@ -151,7 +151,7 @@
                                                 <input type="hidden" name="x_amount" /><input type="hidden" name="x_currency_code" value="USD" />
                                                 <input type="hidden" name="x_test_request" value="FALSE" /><input type="hidden" name="x_relay_response" value="" />
                                                 <input type="hidden" name="donation_prompt" /><input type="hidden" name="button_code" value="Pay Now AEHCA Inc. Donation" />
-                                                <button class="btn btn-info" variant="contained" type='submit'>Continue with donation</button>-->
+                                                <button class="btn btn-info" variant="contained" type='submit'>Continue with donation</button>
                                                 <!-- COMMENT THIS OUT WHEN THIS IS THE OFFICIAL SITE-->
                                                 <button class="btn btn-info" variant="contained" type='submit'>Continue with donation</button>
                                             </div>
