commented out testing button

--- a/give.html
+++ b/give.html
@@ -152,8 +152,8 @@
                                                 <input type="hidden" name="x_test_request" value="FALSE" /><input type="hidden" name="x_relay_response" value="" />
                                                 <input type="hidden" name="donation_prompt" /><input type="hidden" name="button_code" value="Pay Now AEHCA Inc. Donation" />
                                                 <button class="btn btn-info" variant="contained" type='submit'>Continue with donation</button>
-                                                <!-- COMMENT THIS OUT WHEN THIS IS THE OFFICIAL SITE-->
-                                                <button class="btn btn-info" variant="contained" type='submit'>Continue with donation</button>
+                                                <!-- COMMENT THIS OUT WHEN THIS IS THE OFFICIAL SITE
+                                                <button class="btn btn-info" variant="contained" type='submit'>Continue with donation</button>-->
                                             </div>
                                           </div>
                                         </div>
