--- a/updates.html
+++ b/updates.html
@@ -162,6 +162,21 @@
                                 </div>
                             </div>
                             <!-- Copy above to start a new facebook embed-->
+                            <!-- PUT NEWEST POSTS BELOW THIS COMMENT. ORDER SHOULD BE NEWEST POSTS AT THE TOP, BUT BELOW THE INITIAL INFO POST.-->
+                            <!-- Copy below to start a new facebook embed-->
+                            <hr class="my-4">
+                            <div class="row">
+                                <div class="col text-center">
+                                    <!-- FACEBOOK EMBED -->
+                                    <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/364626518217389" data-show-text="true" data-width="">
+                                      <blockquote cite="https://www.facebook.com/AEHCAInc/posts/364626518217389" class="fb-xfbml-parse-ignore">
+                                        <p>Cedar Ridge Community Church, Guatemala Team had a good Zoom meeting with our joint partners in Ipala during this last...</p>
+                                        Posted by <a href="https://www.facebook.com/AEHCAInc/">Association for Education and Health in Central America</a> on&nbsp;
+                                        <a href="https://www.facebook.com/AEHCAInc/posts/364626518217389">Sunday, September 6, 2020</a></blockquote></div>
+                                    <!-- END FACEBOOK EMBED -->
+                                </div>
+                            </div>
+                            <!-- Copy above to start a new facebook embed-->
                             <!-- Copy below to start a new facebook embed-->
                             <hr class="my-4">
                             <div class="row">
@@ -189,20 +204,7 @@
                                 </div>
                             </div>
                             <!-- Copy above to start a new facebook embed-->
-                            <!-- Copy below to start a new facebook embed-->
-                            <hr class="my-4">
-                            <div class="row">
-                                <div class="col text-center">
-                                    <!-- FACEBOOK EMBED -->
-                                    <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/364626518217389" data-show-text="true" data-width="">
-                                      <blockquote cite="https://www.facebook.com/AEHCAInc/posts/364626518217389" class="fb-xfbml-parse-ignore">
-                                        <p>Cedar Ridge Community Church, Guatemala Team had a good Zoom meeting with our joint partners in Ipala during this last...</p>
-                                        Posted by <a href="https://www.facebook.com/AEHCAInc/">Association for Education and Health in Central America</a> on&nbsp;
-                                        <a href="https://www.facebook.com/AEHCAInc/posts/364626518217389">Sunday, September 6, 2020</a></blockquote></div>
-                                    <!-- END FACEBOOK EMBED -->
-                                </div>
-                            </div>
-                            <!-- Copy above to start a new facebook embed-->
+
                             
                         </div>  
                     </div>
