--- a/updates.html
+++ b/updates.html
@@ -163,6 +163,26 @@
               <div class="row">
                 <div class="col text-center">
                   <!-- FACEBOOK EMBED -->
+                  <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/394911871855520"
+                    data-show-text="true" data-width="">
+                    <blockquote cite="https://www.facebook.com/AEHCAInc/posts/394911871855520"
+                      class="fb-xfbml-parse-ignore">
+                      <p>Costa Rica now has had more total cases than Honduras. Percentage of population is second to
+                        Panama. Nicaragua only...</p>
+                      Posted by <a href="https://www.facebook.com/AEHCAInc/">Association for Education and Health in
+                        Central America</a> on&nbsp;
+                      <a href="https://www.facebook.com/AEHCAInc/posts/394911871855520">Thursday, October 15, 2020</a>
+                    </blockquote>
+                  </div>
+                  <!-- END FACEBOOK EMBED -->
+                </div>
+              </div>
+              <!-- Copy above to start a new facebook embed-->
+              <!-- Copy below to start a new facebook embed-->
+              <hr class="my-4">
+              <div class="row">
+                <div class="col text-center">
+                  <!-- FACEBOOK EMBED -->
                   <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/386566002690107"
                     data-show-text="true" data-width="">
                     <blockquote cite="https://www.facebook.com/AEHCAInc/posts/386566002690107"
