--- a/updates.html
+++ b/updates.html
@@ -52,8 +52,8 @@
           <li class="nav-item active">
             <a class="nav-link text-warning" href="/partnerships.html">Partnerships</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link text-warning" href="/give.html">Donate</a>
+          <li class="nav-item">
+            <a class="nav-link text-warning" href="/give.html"><b>$</b> Give</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link text-warning" href="/contact.html">Contact</a>
@@ -66,9 +66,11 @@
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
+          <!-- votes say this moves to the left
           <li class="nav-item">
             <a class="nav-link text-warning" href="/give.html"><b>$</b> Give&nbsp;&nbsp;&nbsp;</a>
           </li>
+          -->
           <!-- GOOGLE TRANSLATE BUTTON-->
           <li>
             <div id="google_translate_element"></div>
