--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
                     <div class="col-sm-7">
                       <div class="card-body">
                         <h5 class="card-title">Vision</h5>
-                        <p class="card-text">Our vision is to plant the seed of knowledge through education,
+                        <p class="card-text">Is to plant the seed of knowledge through education,
                           nurture that seed so that it grows and spreads, and develops into healthy and
                           prosperous communities throughout Central America.</p>
                       </div>
@@ -137,7 +137,7 @@
                     <div class="col-sm-7">
                       <div class="card-body">
                         <h5 class="card-title">History</h5>
-                        <p class="card-text">Our history is brief as we have currently just incorporated.
+                        <p class="card-text">Is brief as we have currently just incorporated.
                           However, our CEO has traveled with the Cedar Ridge Community Church to Ipala Guatemala.
                           They have planted a seed of friendship. Developing relationships with the people there.
                           It is the intent of this Association to build on that example and help spread
