--- a/index.html
+++ b/index.html
@@ -81,14 +81,72 @@
   <!-- END NAVBAR -->
   <main role="main">
     <div class="container-md">
-      <!-- DONT HAVE THIS ON THE HOME PAGE-->
+      <br>
       <div class="jumbotron">
         <p></p>
-        <div class="display-4">
-          <img src="/images/main-logo.png" class="img-fluid" alt="Responsive image">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-6 col-md-4">
+              <div class="display-4">
+                <img src="D:\aehca code - dev\aehca.github.io\images\home-logo.png" class="img-fluid float-left"
+                  alt="AEHCA Inc. logo">
+              </div>
+            </div>
+            <div class="col-md-8">
+              <br>
+              <h3 class="text-center">Association for Education and Health in Central America Inc.</h3>
+            </div>
+          </div>
         </div>
-        <p class="lead text-center">Association for Education and Health in Central America</p>
+
         <hr class="my-4">
+        <div class="container">
+          <p>AEHCA works to advance education and healthy living conditions throughout Central America.
+            Forming partnerships with communities to build on their specific needs and existing resources.</p>
+        </div>
+        <div class="card-group">
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">COVID-19 Response</h5>
+              <p class="card-text"></p>
+            </div>
+            <img src="D:\aehca code - dev\aehca.github.io\images\covid19-resp.jpg" class="card-img-top"
+              alt="ipala covid response image">
+          </div>
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Health</h5>
+              <p class="card-text"></p>
+            </div>
+            <img src="D:\aehca code - dev\aehca.github.io\images\health.jpg" class="card-img-top"
+              alt="ipala health image">
+          </div>
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Education</h5>
+              <p class="card-text"></p>
+            </div>
+            <img src="D:\aehca code - dev\aehca.github.io\images\education.jpg" class="card-img-top"
+              alt="ipala education image">
+          </div>
+        </div>
+        <hr class="my-4">
+        <div class="container">
+          <p>During the COVID-19 pandemic, we are providing emergency food relief to the people of Ipala, Guatemala.
+          </p>
+          <div class="col text-center">
+            <a class="btn btn-info" href="/give.html" role="button">Give</a>
+          </div>
+        </div>
+
+
+
+
+
+
+
+
+        <!--
         <h4 class="mt-0">2019 Ipala Guatemala Trip Report</h4>
         <p></p>
         <div class="media">
@@ -119,6 +177,9 @@
             <a class="btn btn-info float-right" href="/news/1.html" role="button">Read more</a>
           </div>
         </div>
+        -->
+
+
       </div>
     </div>
   </main>
