added an id to a scroll location

--- a/partnerships/guatemala/ipala.html
+++ b/partnerships/guatemala/ipala.html
@@ -157,7 +157,7 @@
                 <!-- END PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
               </div>
             </div>
-            <hr class="my-4">
+            <hr class="my-4" id="ipala-education">
             <div class="row">
               <div class="col">
                 <h4>Education in Ipala Municipality</h4>
