--- a/updates.html
+++ b/updates.html
@@ -2,7 +2,12 @@
 title: Updates
 layout: default
 ---
+
 <main role="main">
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0&appId=160615860693285&autoLogAppEvents=1"
+    nonce="3VrA9mYD"></script>
   <div class="container-md">
     <!-- DONT HAVE THIS ON THE HOME PAGE-->
     <!-- BREADCRUMBS -->
