updated alt tags to be more informative

--- a/404.html
+++ b/404.html
@@ -8,14 +8,14 @@ layout: 404
     <div class="jumbotron">
       <p></p>
       <div class="display-4">
-        <img src="/images/main-logo.png" class="img-fluid" alt="Responsive image">
+        <img src="/images/main-logo.png" class="img-fluid" alt="AEHCA logo">
       </div>
       <p class="lead text-center">Association for Education and Health in Central America</p>
       <hr class="my-4">
       <h4 class="mt-0 text-danger">404 Error</h4>
       <p></p>
       <div class="media">
-        <img src="/images/andrew.jpeg" class="mr-3 rounded" alt="Andrew Peterson, DoIT">
+        <img src="/images/andrew.jpeg" class="mr-3 rounded" alt="Andrew Peterson, DoIT of AEHCA">
         <div class="media-body">
           <h6 class="mt-0">Andrew Peterson, Director of Information and Technology <small
               class="text-muted">{{ site.time | date: '%B %d, %Y' }}</small></h6>
