--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ layout: default
                     </div>
                   </div>
                   <div class="col-sm-5">
-                    <img src="/images/vision.jpg" class="card-img-top h-100" alt="our logo">
+                    <img src="/images/vision.jpg" class="card-img-top h-100" alt="AEHCA logo">
                   </div>
                 </div>
               </div>
@@ -55,7 +55,7 @@ layout: default
               <div class="card">
                 <div class="row no-gutters">
                   <div class="col-sm-5">
-                    <img src="/images/history.jpg" class="card-img-top h-100" alt="history">
+                    <img src="/images/history.jpg" class="card-img-top h-100" alt="AEHCA history">
                   </div>
                   <div class="col-sm-7">
                     <div class="card-body">
@@ -83,7 +83,7 @@ layout: default
                     </div>
                   </div>
                   <div class="col-sm-5">
-                    <img src="/images/about-logo.png" class="card-img-top h-100" alt="our logo">
+                    <img src="/images/about-logo.png" class="card-img-top h-100" alt="AEHCA logo">
                   </div>
                 </div>
             </row>
