--- a/partnerships.html
+++ b/partnerships.html
@@ -56,7 +56,7 @@ layout: default
               </div>
               <div class="col">
                 <div class="display-4">
-                  <img src="/images/central-america.jpg" class="img-fluid rounded" alt="Responsive image">
+                  <img src="/images/central-america.jpg" class="img-fluid rounded" alt="central america image">
                 </div>
               </div>
             </div>
