--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ layout: default
       </div>
       <p></p>
       <div class="display-4">
-        <img src="/images/ipala.jpg" class="img-fluid rounded" alt="Responsive image">
+        <img src="/images/ipala.jpg" class="img-fluid rounded" alt="ipala, guatemala">
       </div>
       <p></p>
       <div class="row">
