updated alt text

--- a/_posts/2020-03-20-letter-from-the-ceo.html
+++ b/_posts/2020-03-20-letter-from-the-ceo.html
@@ -14,7 +14,7 @@ author: billy
             <h4 class="mt-0">Letter from the CEO</h4>
             <p></p>
             <div class="media">
-                <img src="/images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO">
+                <img src="/images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO of AECHA Inc.">
                 <div class="media-body">
                     <h6 class="mt-0">Billy Earles, CEO <small class="text-muted">March 20, 2020</small></h6>
                     <p></p>
