--- a/_posts/2019-08-09-2019-ipala-guatemala-trip-report.html
+++ b/_posts/2019-08-09-2019-ipala-guatemala-trip-report.html
@@ -14,7 +14,7 @@ author: billy
             <h4 class="mt-0">2019 Ipala Guatemala Trip Report</h4>
             <p></p>
             <div class="media">
-                <img src="/images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO">
+                <img src="/images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO of AECHA Inc.">
                 <div class="container">
                     <div class="media-body">
                         <div class="row">
