updated alt text

--- a/partnerships/guatemala/ipala.html
+++ b/partnerships/guatemala/ipala.html
@@ -19,7 +19,7 @@ layout: default
     <!-- END BREADCRUMBS -->
     <div class="jumbotron">
       <div class="display-4">
-        <img src="/images/ipala-welcome.png" class="img-fluid rounded" alt="Responsive image">
+        <img src="/images/ipala-welcome.png" class="img-fluid rounded" alt="Welcome sign to Ipala, Guatemala">
       </div>
       <hr class="my-4">
 
@@ -155,37 +155,43 @@ layout: default
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/images/school-pain.jpg" class="d-block w-100 rounded" alt="ipala on map">
+                    <img src="/images/school-pain.jpg" class="d-block w-100 rounded"
+                      alt="Education - PAIN school - Ipala, Guatemala">
                     <div class="carousel-caption d-none d-md-block">
                       <p class="text-light bg-dark">P.A.I.N</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/images/school-suyate.jpg" class="d-block w-100 rounded" alt="volcano lake">
+                    <img src="/images/school-suyate.jpg" class="d-block w-100 rounded"
+                      alt="Education - Suyata school - Ipala, Guatemala">
                     <div class="carousel-caption d-none d-md-block">
                       <p class="text-light bg-dark">Escuela Oficial De Parvulos - El Suyate</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/images/school-casario.jpg" class="d-block w-100 rounded" alt="volcano lake 2">
+                    <img src="/images/school-casario.jpg" class="d-block w-100 rounded"
+                      alt="Education - Casarío school - Ipala, Guatemala">
                     <div class="carousel-caption d-none d-md-block">
                       <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Casarío Chagüitón</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/images/school-colinas.jpg" class="d-block w-100 rounded" alt="volcano lake 2">
+                    <img src="/images/school-colinas.jpg" class="d-block w-100 rounded"
+                      alt="Education - Las colinas school - Ipala, Guatemala">
                     <div class="carousel-caption d-none d-md-block">
                       <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Colinas</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/images/school-villeda.png" class="d-block w-100 rounded" alt="volcano lake 2">
+                    <img src="/images/school-villeda.png" class="d-block w-100 rounded"
+                      alt="Education - villeda school - Ipala, Guatemala">
                     <div class="carousel-caption d-none d-md-block">
                       <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Cruz de Villeda</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/images/school-poza.jpg" class="d-block w-100 rounded" alt="volcano lake 2">
+                    <img src="/images/school-poza.jpg" class="d-block w-100 rounded"
+                      alt="Education - Poza de la pilla school - Ipala, Guatemala">
                     <div class="carousel-caption d-none d-md-block">
                       <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Poza De La Pila</p>
                     </div>
