added new status update

--- a/updates.html
+++ b/updates.html
@@ -90,6 +90,25 @@ layout: default
             <div class="row">
               <div class="col text-center">
                 <!-- FACEBOOK EMBED -->
+                <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/397829684897072"
+                  data-show-text="true" data-width="">
+                  <blockquote cite="https://www.facebook.com/AEHCAInc/posts/397829684897072"
+                    class="fb-xfbml-parse-ignore">
+                    <p>This week Guatemala went over 100,000 accumulative cases. With their high rate of recovery, there
+                      is only 7,458 Active...</p>Posted by <a href="https://www.facebook.com/AEHCAInc/">Association for
+                      Education and Health in Central America</a> on&nbsp;<a
+                      href="https://www.facebook.com/AEHCAInc/posts/397829684897072">Sunday, October 18, 2020</a>
+                  </blockquote>
+                </div>
+                <!-- END FACEBOOK EMBED -->
+              </div>
+            </div>
+            <!-- Copy above to start a new facebook embed-->
+            <!-- Copy below to start a new facebook embed-->
+            <hr class="my-4">
+            <div class="row">
+              <div class="col text-center">
+                <!-- FACEBOOK EMBED -->
                 <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/394911871855520"
                   data-show-text="true" data-width="">
                   <blockquote cite="https://www.facebook.com/AEHCAInc/posts/394911871855520"
