--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@ layout: default
       </div>
       <div class="card-group">
         <div class="card text-center">
-          <div class="card-body">
-            <h5 class="card-title">COVID-19 Response</h5>
-            <p class="card-text"></p>
-          </div>
-          <img src="/images/covid19-resp.jpg" class="card-img-top" alt="ipala covid response image">
-        </div>
+          {% for post in site.posts %}
+          {% if post.title == "2020 Response to Covid-19 in Central America" %}
+          <a href="{{ post.url }}">
+            {% endif %}
+            {% endfor %}
+            <div class="card-body">
+              <h5 class="card-title">COVID-19 Response</h5>
+              <p class="card-text"></p>
+            </div>
+            <img src="/images/covid19-resp.jpg" class="card-img-top" alt="ipala covid response image">
+        </div></a>
         <div class="card text-center">
           <div class="card-body">
             <h5 class="card-title">Health</h5>
