facebook embed change
changed from showing individual posts to the whole page

--- a/updates.html
+++ b/updates.html
@@ -67,147 +67,20 @@ layout: default
             <div class="row">
               <div class="col text-center">
                 <!-- FACEBOOK EMBED -->
-                <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/118206839526026"
-                  data-show-text="true" data-width="">
-                  <blockquote cite="https://developers.facebook.com/AEHCAInc/posts/118206839526026"
-                    class="fb-xfbml-parse-ignore">
-                    <p>Welcome to the Association for Education and Health in Central America Facebook page.
-
-                      We are an Association of hope,...</p>Posted by <a
-                      href="https://www.facebook.com/AEHCAInc/">Association for Education and Health in Central
-                      America
-                    </a> on&nbsp;<a href="https://developers.facebook.com/AEHCAInc/posts/118206839526026">Monday,
-                      August 12, 2019</a>
+                <div class="fb-page" data-href="https://www.facebook.com/AEHCAInc" data-tabs="timeline" data-width=""
+                  data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
+                  data-show-facepile="false">
+                  <blockquote cite="https://www.facebook.com/AEHCAInc" class="fb-xfbml-parse-ignore">
+                    <a href="https://www.facebook.com/AEHCAInc">Association for Education and Health in Central
+                      America</a>
                   </blockquote>
                 </div>
                 <!-- END FACEBOOK EMBED -->
               </div>
             </div>
-            <!-- Copy above to start a new facebook embed-->
-            <!-- PUT NEWEST POSTS BELOW THIS COMMENT. ORDER SHOULD BE NEWEST POSTS AT THE TOP, BUT BELOW THE INITIAL INFO POST.-->
-            <!-- Copy below to start a new facebook embed-->
-            <hr class="my-4">
-            <div class="row">
-              <div class="col text-center">
-                <!-- FACEBOOK EMBED -->
-                <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/397829684897072"
-                  data-show-text="true" data-width="">
-                  <blockquote cite="https://www.facebook.com/AEHCAInc/posts/397829684897072"
-                    class="fb-xfbml-parse-ignore">
-                    <p>This week Guatemala went over 100,000 accumulative cases. With their high rate of recovery, there
-                      is only 7,458 Active...</p>Posted by <a href="https://www.facebook.com/AEHCAInc/">Association for
-                      Education and Health in Central America</a> on&nbsp;<a
-                      href="https://www.facebook.com/AEHCAInc/posts/397829684897072">Sunday, October 18, 2020</a>
-                  </blockquote>
-                </div>
-                <!-- END FACEBOOK EMBED -->
-              </div>
-            </div>
-            <!-- Copy above to start a new facebook embed-->
-            <!-- Copy below to start a new facebook embed-->
-            <hr class="my-4">
-            <div class="row">
-              <div class="col text-center">
-                <!-- FACEBOOK EMBED -->
-                <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/394911871855520"
-                  data-show-text="true" data-width="">
-                  <blockquote cite="https://www.facebook.com/AEHCAInc/posts/394911871855520"
-                    class="fb-xfbml-parse-ignore">
-                    <p>Costa Rica now has had more total cases than Honduras. Percentage of population is second to
-                      Panama. Nicaragua only...</p>
-                    Posted by <a href="https://www.facebook.com/AEHCAInc/">Association for Education and Health in
-                      Central America</a> on&nbsp;
-                    <a href="https://www.facebook.com/AEHCAInc/posts/394911871855520">Thursday, October 15, 2020</a>
-                  </blockquote>
-                </div>
-                <!-- END FACEBOOK EMBED -->
-              </div>
-            </div>
-            <!-- Copy above to start a new facebook embed-->
-            <!-- Copy below to start a new facebook embed-->
-            <hr class="my-4">
-            <div class="row">
-              <div class="col text-center">
-                <!-- FACEBOOK EMBED -->
-                <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/386566002690107"
-                  data-show-text="true" data-width="">
-                  <blockquote cite="https://www.facebook.com/AEHCAInc/posts/386566002690107"
-                    class="fb-xfbml-parse-ignore">
-                    <p>Please pardon my failure to post the last two weeks.
-
-                      There have been some new developments since my last post.
-
-                      On...</p>Posted by <a href="https://www.facebook.com/AEHCAInc/">Association for Education and
-                      Health in Central America</a> on&nbsp;<a
-                      href="https://www.facebook.com/AEHCAInc/posts/386566002690107">Sunday, October 4, 2020</a>
-                  </blockquote>
-                </div>
-                <!-- END FACEBOOK EMBED -->
-              </div>
-            </div>
-            <!-- Copy above to start a new facebook embed-->
-            <!-- Copy below to start a new facebook embed-->
-            <hr class="my-4">
-            <div class="row">
-              <div class="col text-center">
-                <!-- FACEBOOK EMBED -->
-                <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/364626518217389"
-                  data-show-text="true" data-width="">
-                  <blockquote cite="https://www.facebook.com/AEHCAInc/posts/364626518217389"
-                    class="fb-xfbml-parse-ignore">
-                    <p>Cedar Ridge Community Church, Guatemala Team had a good Zoom meeting with our joint partners in
-                      Ipala during this last...</p>
-                    Posted by <a href="https://www.facebook.com/AEHCAInc/">Association for Education and Health in
-                      Central America</a> on&nbsp;
-                    <a href="https://www.facebook.com/AEHCAInc/posts/364626518217389">Sunday, September 6, 2020</a>
-                  </blockquote>
-                </div>
-                <!-- END FACEBOOK EMBED -->
-              </div>
-            </div>
-            <!-- Copy above to start a new facebook embed-->
-            <!-- Copy below to start a new facebook embed-->
-            <hr class="my-4">
-            <div class="row">
-              <div class="col text-center">
-                <!-- FACEBOOK EMBED -->
-                <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/337414704271904"
-                  data-show-text="true" data-width="">
-                  <blockquote cite="https://developers.facebook.com/AEHCAInc/posts/337414704271904"
-                    class="fb-xfbml-parse-ignore">
-                    <p>Guatemala is now pushing 50,000 cases. Probably by the time the next report goes out, they will
-                      exceed that...</p>Posted by
-                    <a href="https://www.facebook.com/AEHCAInc/">Association for Education and Health in Central
-                      America</a> on&nbsp;
-                    <a href="https://developers.facebook.com/AEHCAInc/posts/337414704271904">Saturday, August 1,
-                      2020</a>
-                  </blockquote>
-                </div>
-                <!-- END FACEBOOK EMBED -->
-              </div>
-            </div>
-            <!-- Copy above to start a new facebook embed-->
-            <!-- Copy below to start a new facebook embed-->
-            <hr class="my-4">
-            <div class="row">
-              <div class="col text-center">
-                <!-- FACEBOOK EMBED -->
-                <div class="fb-post" data-href="https://www.facebook.com/AEHCAInc/posts/325760668770641"
-                  data-show-text="true" data-width="">
-                  <blockquote cite="https://developers.facebook.com/AEHCAInc/posts/325760668770641"
-                    class="fb-xfbml-parse-ignore">
-                    Posted by <a href="https://www.facebook.com/AEHCAInc/">Association for Education and Health in
-                      Central America</a>
-                    on&nbsp;<a href="https://developers.facebook.com/AEHCAInc/posts/325760668770641">Wednesday, July
-                      15, 2020</a></blockquote>
-                </div>
-                <!-- END FACEBOOK EMBED -->
-              </div>
-            </div>
-            <!-- Copy above to start a new facebook embed-->
           </div>
         </div>
       </div>
-    </div> <!-- end of jumbotron-->
+    </div>
   </div>
 </main>
