--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@ layout: default
         <div class="col text-center">
           <a class="btn btn-info" href="/give.html" role="button">Give</a>
         </div>
+        <p>
+          By giving, you are contributing to the education and creating healthy living conditions in Central America
+          communities.
+        </p>
       </div>
       <hr class="my-4">
       <h4 class="mt-0">2019 Ipala Guatemala Trip Report</h4>
