--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ layout: default
           </div>
           <img src="/images/health.jpg" class="card-img-top" alt="ipala health image">
         </div>
-
       </div>
+
       <hr class="my-4">
       <div class="container">
         <p>During the COVID-19 pandemic, we are providing emergency food relief to the people of Ipala,
@@ -69,6 +69,7 @@ layout: default
           communities.
         </p>
       </div>
+      <!--
       <hr class="my-4">
       <h4 class="mt-0">2019 Ipala Guatemala Trip Report</h4>
       <p></p>
@@ -108,7 +109,7 @@ layout: default
           {% endif %}
           {% endfor %}
         </div>
-      </div>
+      </div>-->
     </div>
   </div>
 </main>
