--- a/_posts/2020-12-15-education-support.html
+++ b/_posts/2020-12-15-education-support.html
@@ -62,8 +62,79 @@ author: billy
                                     providing access to education and strengthening their knowledge along the path.
                                     Then continuing to fill the needs of students at an advanced level of education,
                                     and adults who need computer skills or learning English.</p>
-
-                                <!--
+                                <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+                                <div class="col">
+                                    <div id="educationCarousel" class="carousel slide" data-ride="carousel">
+                                        <ol class="carousel-indicators">
+                                            <li data-target="#educationCarousel" data-slide-to="0" class="active"></li>
+                                            <li data-target="#educationCarousel" data-slide-to="1"></li>
+                                            <li data-target="#educationCarousel" data-slide-to="2"></li>
+                                            <li data-target="#educationCarousel" data-slide-to="3"></li>
+                                            <li data-target="#educationCarousel" data-slide-to="4"></li>
+                                            <li data-target="#educationCarousel" data-slide-to="5"></li>
+                                        </ol>
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <img src="/images/school-pain.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - PAIN school - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">P.A.I.N</p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/school-suyate.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - Suyata school - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">Escuela Oficial De Parvulos - El
+                                                        Suyate</p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/school-casario.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - Casarío school - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Casarío
+                                                        Chagüitón</p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/school-colinas.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - Las colinas school - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Colinas
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/school-villeda.png" class="d-block w-100 rounded"
+                                                    alt="Education - villeda school - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Cruz de
+                                                        Villeda</p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/school-poza.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - Poza de la pilla school - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Poza De
+                                                        La Pila</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <a class="carousel-control-prev" href="#educationCarousel" role="button"
+                                            data-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#educationCarousel" role="button"
+                                            data-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </div>
+                                    <!-- END PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+                                    <!--
                                 <div class="row">
                                     <div class="card">
                                         <div class="row no-gutters">
@@ -133,21 +204,21 @@ author: billy
                                     </div>
                                 </div>
                                 -->
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <hr class="my-4">
-                    <p class="font-weight-bold">Read another post from our team below.</p>
-                    <div class="list-group">
-                        {% for post in site.posts %}
-                        {% if page.title == post.title %}
-                        <a class="list-group-item list-group-item-action active"
-                            href="{{ post.url }}">{{ post.title }}</a>
-                        {% else %}
-                        <a class="list-group-item list-group-item-action" href="{{ post.url }}">{{ post.title }}</a>
-                        {% endif %}
-                        {% endfor %}
+                        <hr class="my-4">
+                        <p class="font-weight-bold">Read another post from our team below.</p>
+                        <div class="list-group">
+                            {% for post in site.posts %}
+                            {% if page.title == post.title %}
+                            <a class="list-group-item list-group-item-action active"
+                                href="{{ post.url }}">{{ post.title }}</a>
+                            {% else %}
+                            <a class="list-group-item list-group-item-action" href="{{ post.url }}">{{ post.title }}</a>
+                            {% endif %}
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
-            </div>
 </main>
