--- a/_posts/2020-12-15-education-support.html
+++ b/_posts/2020-12-15-education-support.html
@@ -75,50 +75,48 @@ author: billy
                                         </ol>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
-                                                <img src="/images/school-pain.jpg" class="d-block w-100 rounded"
-                                                    alt="Education - PAIN school - Ipala, Guatemala">
+                                                <img src="/images/edu-computers.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - computers - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">P.A.I.N</p>
+                                                    <p class="text-light bg-dark">C.E.D.H.E.R Computer Center</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="/images/school-suyate.jpg" class="d-block w-100 rounded"
-                                                    alt="Education - Suyata school - Ipala, Guatemala">
+                                                <img src="/images/edu-LasColinas-02.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - Las Colinas school - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Escuela Oficial De Parvulos - El
-                                                        Suyate</p>
+                                                    <p class="text-light bg-dark">Escuela De Las Colinas</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="/images/school-casario.jpg" class="d-block w-100 rounded"
-                                                    alt="Education - Casarío school - Ipala, Guatemala">
+                                                <img src="/images/edu-2019-Desks3-AdultEdu.jpeg"
+                                                    class="d-block w-100 rounded"
+                                                    alt="Education - English class - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Casarío
-                                                        Chagüitón</p>
+                                                    <p class="text-light bg-dark">Students learning English</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="/images/school-colinas.jpg" class="d-block w-100 rounded"
-                                                    alt="Education - Las colinas school - Ipala, Guatemala">
+                                                <img src="/images/edu-Obraje-03.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - Obraje students - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Colinas
+                                                    <p class="text-light bg-dark">Obraje students
                                                     </p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="/images/school-villeda.png" class="d-block w-100 rounded"
-                                                    alt="Education - villeda school - Ipala, Guatemala">
+                                                <img src="/images/edu-Pain-05.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - P.A.I.N school - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Cruz de
-                                                        Villeda</p>
+                                                    <p class="text-light bg-dark">P.A.I.N schooling</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="/images/school-poza.jpg" class="d-block w-100 rounded"
-                                                    alt="Education - Poza de la pilla school - Ipala, Guatemala">
+                                                <img src="/images/edu-powerpoint.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - technology - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Escuela Oficial Rural Mixta - Poza De
-                                                        La Pila</p>
+                                                    <p class="text-light bg-dark">Students learning powerpoint skills
+                                                    </p>
                                                 </div>
                                             </div>
                                         </div>
