fix name of partner

--- a/_posts/2020-12-15-education-support.html
+++ b/_posts/2020-12-15-education-support.html
@@ -78,7 +78,7 @@ author: billy
                                                 <img src="/images/edu-computers.jpg" class="d-block w-100 rounded"
                                                     alt="Education - computers - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">C.E.D.H.E.R Computer Center</p>
+                                                    <p class="text-light bg-dark">C.I.D.H.E.R Computer Center</p>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
