--- a/give.html
+++ b/give.html
@@ -68,6 +68,7 @@ layout: default
                             value="Pay Now AEHCA Inc. Donation" />
                           <button class="btn btn-info" variant="contained" type='submit'>Continue with
                             donation</button>
+                        </form>
                       </div>
                     </div>
                   </div>
