--- a/give.html
+++ b/give.html
@@ -78,7 +78,7 @@ layout: default
             <div class="row">
               <div class="col text-center">
                 <br>
-                <!-- PayPal button -->
+                <!-- PayPal button. got the paypal image from mightywriters-->
                 <form action="https://www.paypal.com/donate" method="post" target="_top">
                   <input type="hidden" name="hosted_button_id" value="HJEL3VHRUCN3G" />
                   <input type="image" src="https://www.eduhealthca.org/images/paypal_button.png" border="0"
