--- a/thankyou.html
+++ b/thankyou.html
@@ -11,10 +11,10 @@ layout: default
             </div>
             <p class="lead text-center">Association for Education and Health in Central America</p>
             <hr class="my-4">
-            <h4 class="mt-0 text-danger">Thank you!</h4>
+            <h4 class="mt-0">Thank you!</h4>
             <p></p>
             <div class="media">
-                <img src="/images/icon.ico" class="mr-3 rounded" alt="AEHCA Inc. Team">
+                <img src="/images/main-logo.png" class="mr-3 rounded" alt="AEHCA Inc. Team">
                 <div class="media-body">
                     <h6 class="mt-0">Association for Education and Health in Central America Team <small
                             class="text-muted">{{ site.time | date: '%B %d, %Y' }}</small></h6>
