--- a/thankyou.html
+++ b/thankyou.html
@@ -14,7 +14,7 @@ layout: default
             <h4 class="mt-0">Thank you!</h4>
             <p></p>
             <div class="media">
-                <img src="/images/main-logo.png" class="mr-3 rounded" alt="AEHCA Inc. Team">
+                <img src="/images/about-logo.png" class="mr-3 rounded" alt="AEHCA Inc. Team">
                 <div class="media-body">
                     <h6 class="mt-0">Association for Education and Health in Central America Team <small
                             class="text-muted">{{ site.time | date: '%B %d, %Y' }}</small></h6>
