--- a/_posts/2021-03-05-health-in-guatemala.html
+++ b/_posts/2021-03-05-health-in-guatemala.html
@@ -57,7 +57,6 @@ author: billy
                                             <li data-target="#healthCarousel" data-slide-to="2"></li>
                                             <li data-target="#healthCarousel" data-slide-to="3"></li>
                                             <li data-target="#healthCarousel" data-slide-to="4"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="5"></li>
                                         </ol>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
@@ -70,7 +69,7 @@ author: billy
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="/images/health-no-stove.jpg" class="d-block w-100 rounded"
+                                                <img src="/images/health-no-stove-1.jpg" class="d-block w-100 rounded"
                                                     alt="Health - Smokeless Stoveless - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
                                                     <p class="text-light bg-dark">Home with soot from cooking without
@@ -78,7 +77,7 @@ author: billy
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="/images/health-stove-chimney.jpg"
+                                                <img src="/images/health-stove-chimney-1.jpg"
                                                     class="d-block w-100 rounded"
                                                     alt="Health - Smokeless Stove Chimney - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
@@ -86,7 +85,7 @@ author: billy
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="/images/health-stove-delivery.jpg"
+                                                <img src="/images/health-stove-delivery-1.jpg"
                                                     class="d-block w-100 rounded"
                                                     alt="Health - Smokeless Stove Delivery - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
@@ -94,7 +93,7 @@ author: billy
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="/images/health-stove.jpg" class="d-block w-100 rounded"
+                                                <img src="/images/health-stove-1.jpg" class="d-block w-100 rounded"
                                                     alt="Health - Smokeless Stove - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
                                                     <p class="text-light bg-dark">Moving the new smokeless stove base
