bug fix - missing </a>

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ layout: default
               <p class="card-text"></p>
             </div>
             <img src="/images/health.jpg" class="card-img-top" alt="ipala health image">
-        </div>
+        </div></a>
       </div>
 
       <hr class="my-4">
